curved edges of pic and fixed title overlap

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
 .navbar {
   position: fixed;
   width: 100%;
+  z-index: 999;
   padding: 30px 0;
   font-family: "Montserrat", sans-serif;
   transition: all 0.3s ease;
@@ -145,6 +146,7 @@ section {
   height: 400px;
   width: 400px;
   object-fit: cover;
+  border-radius: 6px;
 }
 
 @media (max-width: 945px) {
